Fixed paths for security, updated code to use new GH API, fixed BDD features, adjusted some CS.

--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Bundle/show.html.twig
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Bundle/show.html.twig
@@ -54,7 +54,9 @@
                     </a>
                  </li>
                 {% endif %}
+                {% if not bundle.canonicalConfig is empty %}
                 <li class="info-configuration"><a id="canonical-config-id" href="#">Canonical configuration</a></li>
+                {% endif %}
             </ul>
         </div>
 
@@ -264,13 +266,13 @@
         </div>
     </form>
     {%- endif -%}
-        
+
+    {%- if not bundle.canonicalConfig is empty -%}
     <div class="canonical-configuration-class modal">
         <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal">×</button>
             <h3>Canonical Configuration:</h3>
         </div>
-        {% if bundle.canonicalConfig %}
             <div id="canonical-config">
                 <div class="markdown">
                 <pre class="code">
@@ -278,6 +280,6 @@
                 </pre>
                 </div>
             </div>
-        {% endif %}
     </div>
+    {%- endif -%}
 {% endblock %}
