--- a/app/Resources/TwigBundle/views/Exception/error404.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error404.html.twig
@@ -14,8 +14,8 @@
     </section>
 
     <section id="error-desc">
-        <p>Edgar and hid Jedi friends</p>
-        <p>Can't find page you're lookign for.</p>
+        <p>Edgar and his Jedi friends</p>
+        <p>Can't find page you're looking for.</p>
         <p id="error-sorry">(we're terribly sorry about this)</p>
     </section>
 </div>
