--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/views/User/userbar.html.twig
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/views/User/userbar.html.twig
@@ -1,8 +1,8 @@
 <div id="auth">
 {% if app.user is not null %}
     <ul id="userbar">
-        <li><img src="{{ app.user.gravatarHash }}" height="30" width="30" /></li>
-        <li class="username"><span>{{ app.user }}</span></li>
+        <li><a href="{{ path('user_show', {'name': app.user.name }) }}"><img src="{{ app.user.gravatarHash }}" height="30" width="30" alt=""></a></li>
+        <li class="username"><a href="{{ path('user_show', {'name': app.user.name }) }}"><span>{{ app.user }}</span></a></li>
         <li class="logout"><a href="{{ path('_logout') }}"><i title="Log out" class="icon-off"></i></a></li>
     </ul>
 {% else %}
