--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Bundle/searchByKeywordResults.html.twig
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Bundle/searchByKeywordResults.html.twig
@@ -1,19 +1,20 @@
 {% extends 'KnpBundlesBundle::layout/900px.html.twig' %}
 
-{% block title %}{% trans with {'%count%': bundles.totalItemCount, '%keyword%': keywordSlug} %}bundles.meta.titleKeywords{% endtrans %}{% endblock %}
+{% block title %}{% trans with {'%count%': bundles.nbResults, '%keyword%': keywordSlug} %}bundles.meta.titleKeywords{% endtrans %}{% endblock %}
 
-{% block description %}{% trans with {'%count%': bundles.totalItemCount} %}bundles.meta.description{% endtrans %}{% endblock %}
+{% block description %}{% trans with {'%count%': bundles.nbResults} %}bundles.meta.description{% endtrans %}{% endblock %}
 
 {% block intro %}
 <div id="intro">
-    <h1>{{ block('title') }}</h1>
+    <h1>Searching</h1>
+    <h2>Looking for keyword "{{ keywordSlug }}"</h2>
 </div>
 {% endblock %}
 
 {% block left %}
-<div class="content-box">
+<div class="content-box clearfix">
     <hgroup>
-        <h2>{% trans with {'%count%': bundles.totalItemCount, '%keyword%': keywordSlug} %}bundles.meta.titleKeywords{% endtrans %}</h2>
+        <h2>{% trans with {'%count%': bundles.nbResults, '%keyword%': keywordSlug} %}bundles.meta.titleKeywords{% endtrans %}</h2>
     </hgroup>
 
     <section class="bundles-list">
