Improve search by extending Solr indexes, and kind of analyzes used in search.
Fix for search query with spaces was escaped wrong, i.e.: `php code` => `phpcode`

Fix case when search was called in `json` format and query was empty

Adjust `BundleUtilsExtension#bundleActivity()` to accept string dates, not only `\DateTime` instances.

Simplified `SolrUtils#isSolrRunning()` to use solarium functionality

--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Bundle/searchBigList.html.twig
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Bundle/searchBigList.html.twig
@@ -19,7 +19,7 @@
             </li>
             <li class="bundle-activity">
                 {% trans %}bundles.list.activity{% endtrans %}
-                <abbr title="{% trans %}bundles.list.lastCommit{% endtrans %}{{ time_diff(bundle.lastCommitAt) }}">{{ time_diff(bundle.lastCommitAt) }}</abbr>
+                <abbr title="{% trans %}bundles.list.lastCommit{% endtrans %}{{ time_diff(bundle.lastCommitAt) }}" class="{{ bundle.lastCommitAt|bundle_activity|trans|lower }}">{{ bundle.lastCommitAt|bundle_activity|trans }}</abbr>
             </li>
         </ul>
     </div>
