--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Bundle/evolution.html.twig
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Bundle/evolution.html.twig
@@ -32,7 +32,7 @@
             <li>
                 <div>
                     <img src="{{ asset('bundles/knpbundles/images/icon_big_dev.png') }}" alt="">
-                    <span>{{ users }}</span><br>Developers
+                    <span>{{ developers }}</span><br>Developers
                 </div>
             </li>
         </ul>
