--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Bundle/list.html.twig
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Bundle/list.html.twig
@@ -50,17 +50,17 @@
     </section>
 </div>
 
-<div class="sidebar-box sidebar-users-list clearfix">
+<div class="sidebar-box sidebar-developers-list clearfix">
     <hgroup>
-        <h2>Newest Users</h2>
+        <h2>Newest developers</h2>
     </hgroup>
 
     <section>
         <ul>
-            {% for user in users %}
+            {% for developer in developers %}
             <li>
-                <a href="{{ path('user_show', {'name': user.username}) }}">
-                    <img src="{{ user.gravatarHash|default('http://www.gravatar.com/avatar/?d=identicon&f=y&s=40') }}" alt="{{ user.name }}" title="{{ user.name }}" width="40" height="40">
+                <a href="{{ path('developer_show', {'name': developer.name}) }}">
+                    <img src="{{ developer.avatarUrl|default('http://www.gravatar.com/avatar/?d=identicon&f=y&s=40') }}" alt="{{ developer.name }}" title="{{ developer.name }}" width="40" height="40">
                 </a>
             </li>
             {% endfor %}
