Improve evolution page, add parameter for evolution period

--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Bundle/evolution.html.twig
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Bundle/evolution.html.twig
@@ -35,6 +35,12 @@
                     <span>{{ developers }}</span><br>Developers
                 </div>
             </li>
+            <li>
+                <div>
+                    <img src="{{ asset('bundles/knpbundles/images/icon_big_org.png') }}" alt="">
+                    <span>{{ organizations }}</span><br>Organizations
+                </div>
+            </li>
         </ul>
     </section>
 </div>
